13 November 2008: Wouter
	- added fedora init and specfile to contrib (by Paul Wouters).
	- added configure check for ldns 1.4.0 (using its compat funcs).

12 November 2008: Wouter
	- add unbound-control manpage to makedist replace list.

11 November 2008: Wouter
	- unit test for negative cache, stress tests the refcounting.
	- fix for refcounting error that could cause fptr_wlist fatal exit
	  in the negative cache rbtree (upcoming 1.1 feature). (Thanks to 
	  Attila Nagy for testing).
	- nicer comments in cachedump about failed RR to string conversion.
	- fix 32bit wrap around when printing large (4G and more) mem usage
	  for extended statistics.

10 November 2008: Wouter
	- fixup the getaddrinfo compat code rename.

8 November 2008: Wouter
	- added configure check for eee build warning.

7 November 2008: Wouter
	- fix bug 217: fixed, setreuid and setregid do not work on MacOSX10.4.
	- detect nonblocking problems in network stack in configure script.

6 November 2008: Wouter
	- dname_priv must decompress the name before comparison.
	- iana portlist updated.

5 November 2008: Wouter
	- fixed possible memory leak in key_entry_key deletion.
	  Would leak a couple bytes when trust anchors were replaced.
	- if query and reply qname overlap, the bytes are skipped not copied.
	- fixed file descriptor leak when messages were jostled out that
	  had outstanding (TCP) replies.
	- DNAMEs used from cache have their synthesized CNAMEs initialized
	  properly.
	- fixed file descriptor leak for localzone type deny (for TCP).
	- fixed memleak at exit for nsec3 negative cached zones.
	- fixed memleak for the keyword 'nodefault' when reading config.
	- made verbosity of 'edns incapable peer' warning higher, so you
	  do not get spammed by it.
	- caught elusive Bad file descriptor error bug, that would print the
	  error while unnecessarily try to listen to a closed fd. Fixed.

4 November 2008: Wouter
	- fixed -Wwrite-strings warnings that result in better code.
