@@ -1,6 +1,7 @@
 13 November 2008: Wouter
 	- added fedora init and specfile to contrib (by Paul Wouters).
 	- added configure check for ldns 1.4.0 (using its compat funcs).
+	- neater comments in worker.h.
 
 12 November 2008: Wouter
 	- add unbound-control manpage to makedist replace list.
